removed pink nav in some places and fixed overflow

--- a/dependencies/index/mycss.css
+++ b/dependencies/index/mycss.css
@@ -13,6 +13,16 @@ html .elementor-6 .elementor-element.elementor-element-bfd172b .elementor-image 
         box-shadow: 10px 10px 0px 1px rgba(0,0,0,0.07);
 }
 
+html .elementor-6 .elementor-element.elementor-element-33a79095 > .elementor-background-overlay{
+    background:null;
+    opacity:0;
+}
+
+
+html .elementor-6 .elementor-element.elementor-element-33a79095:not(.elementor-motion-effects-element-type-background), .elementor-6 .elementor-element.elementor-element-33a79095 > .elementor-motion-effects-container > .elementor-motion-effects-layer {
+        filter: brightness( 126% ) contrast( 96% ) saturate( 111% ) blur( 0px ) hue-rotate( 0deg ) !important;
+}
+
 
 
 html .elementor-widget-icon-box .elementor-icon-box-content:not(.avoid-this){
@@ -35,15 +45,6 @@ html .elementor-5 .elementor-element.elementor-element-d7d8b56 .elementor-backgr
 
 
 
-html .elementor-6 .elementor-element.elementor-element-33a79095 > .elementor-background-overlay{
-    /*background:null;*/
-    opacity:0;
-}
-
-
-html .elementor-6 .elementor-element.elementor-element-33a79095:not(.elementor-motion-effects-element-type-background), .elementor-6 .elementor-element.elementor-element-33a79095 > .elementor-motion-effects-container > .elementor-motion-effects-layer {
-        filter: brightness( 126% ) contrast( 96% ) saturate( 111% ) blur( 0px ) hue-rotate( 0deg ) !important;
-}
 
 
 
